--- a/MySite/css/stylo.css
+++ b/MySite/css/stylo.css
@@ -9,7 +9,7 @@ h1 {
   border:0px;
   color: #66BFBF;
   font-family: 'Sacramento', cursive;
-  font-size: 3rem;
+  font-size: 3em;
   margin: 0px;
   padding-top: 30px;
 }
@@ -18,7 +18,7 @@ h2 {
   border:0px;
   color: #66BFBF;
   font-family: 'Raleway', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.5em;
   font-weight: bolder;
   margin: 10px 0;
   padding-top: 20px;
@@ -27,7 +27,7 @@ h3 {
   border:0px;
   color: #66BFBF;
   font-family: 'Raleway', sans-serif;
-  font-size: 1.2rem;
+  font-size: 1.rem;
   font-weight: bold;
   margin: 10px 0;
   padding-top: 30px;
@@ -48,6 +48,11 @@ p{
 }
 
 /*************************************Class Selectors***********************/
+.my_pic{
+  border-radius: 40%;
+  height: 12rem;
+  margin-top: 20px;
+}
 .attribution{
   font-size: 0.5rem;
   display:inline-block;
